styles for groupbox - bug with caption visibility of nested groupboxes fixed

--- a/modules/web/css/VAADIN/themes/peyto/groupbox/groupbox.css
+++ b/modules/web/css/VAADIN/themes/peyto/groupbox/groupbox.css
@@ -65,7 +65,7 @@
     vertical-align: middle;
 }
 
-.group-box-nocollapsable.group-box-nocaption .group-box-caption {
+.group-box-nocollapsable.group-box-nocaption > fieldset > legend > .group-box-caption {
     display: none;
 }
 
